--- a/index.html
+++ b/index.html
@@ -51,15 +51,15 @@
                     <a href="#top" class="nav-item nav-link active">Accueil</a>
                     <a href="#Actualités" class="nav-item nav-link">Actualités</a>
                     <a href="#outils" class="nav-item nav-link">Outils</a>
-                    <a href="" class="nav-item nav-link">Blog</a>
+                    <!--<a href="" class="nav-item nav-link">Blog</a><-->
                     <a href="contact.html" class="nav-item nav-link secondC">Contact</a>
-                    <a href="documentation.html" class="nav-item nav-link secondC">Documentation</a>
+                    <a href="ressources.html" class="nav-item nav-link secondC">Ressources</a>
                     <a href="#témoignages" class="nav-item nav-link secondC">Témoignages</a>
                     <a href="#équipe" class="nav-item nav-link secondC">Notre équipe</a>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-plus-square ms-3"></i></a>
                         <div class="dropdown-menu bg-light m-0">
-                            <a href="documentation.html" class="dropdown-item">Documentation</a>
+                            <a href="ressources.html" class="dropdown-item">Ressources</a>
                             <a href="#témoignages" class="dropdown-item">Témoignages d'enseignants</a>
                             <a href="#équipe" class="dropdown-item">Notre équipe</a>
                         </div>
@@ -259,7 +259,7 @@
                             <p class="">
                                 <strong>Les missions du SNAP :</strong>
                                 <ul>
-                                    <li><strong>Vous Accompagner </strong> dans votre approche pédagogique et numérique.</li>
+                                    <li><strong>Vous accompagner </strong> dans votre approche pédagogique et numérique.</li>
                                     <li>
                                         <strong>Hybrider ou enrichir</strong> vos enseignements.</li>
                                     <li>
@@ -271,7 +271,7 @@
                                     <li>
                                         <strong>Assurer une veille</strong> des usages pédagogiques et numériques. </li>
                                     <li>
-                                        <strong>Conduire l’aménagement pédagogique & numérique</strong> des espaces physiques d’apprentissages.
+                                        <strong>Soutenir l’aménagement pédagogique & numérique</strong> des espaces physiques d’apprentissages.
                                     </li>
                                 </ul>
                             </p>
@@ -312,8 +312,7 @@
                                 <div class="event col-lg-12 shadow">
                                     <div class="eventHeader">
                                         <i class="fa fa-calendar"></i>
-                                        <p>Atelier MOODLE</p>
-                                        <p class="date">04/05/2023</p>
+                                        <p>Atelier MOODLE 04/05/2023</p>
                                     </div>
                                     <div class="eventSub">
                                         <img class="img-fluid" src="img/about-4.webp" alt="" />
@@ -355,6 +354,7 @@
             </div>
         </section>
         <!--ACTU2-->
+        <!--<-->
         <section id="Actualités2" class="container-xxl py-6 Actu">
             <div class="container">
                 <div class="text-center mx-auto mb-5 wow wow2 fadeInUp" data-wow-delay="0.1s" style="max-width: 500px" * />
@@ -365,6 +365,7 @@
             <iframe src="https://www.unimes.fr/fr/index/actualites.html" frameborder="0" border="0" cellspacing="0" title="Site de l'Université de Nîmes" style="border-style: none;width: 100%; height: 100%;" class="shadow"></iframe>
             </div>
         </section>
+        <!--<-->
         <!--TOOLS-->
         <section id="outils" class=" outils container-xxl courses my-6 py-6 pb-0">
             <div class="container">
@@ -483,6 +484,7 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-8 wow fadeInUp shadow testiW" data-wow-delay="0.1s">
                         <div class="owl-carousel testimonial-carousel">
+
                             <div class="testimonial-item text-center">
                                 <div class="position-relative mb-5">
                                     <img class="img-fluid rounded-circle mx-auto" src="img/testimonial.webp" alt="" />
@@ -497,12 +499,14 @@
                                     et tempor diam tempor erat.
                                 </p>
                                 <!--Mettre lien projets moodle<-->
-                                <a href="" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block testiBtn">Exemple de réalisation<i class="fa fa-search ms-3"></i></a>
+                                    <img class="img-fluid TestImg" src="img/courses-1.webp" alt="" />
+                                <!--<a href="" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block testiBtn">Exemple de réalisation<i class="fa fa-search ms-3"></i></a><-->
                                 <hr class="w-25 mx-auto" />
                                 <h5>Florence Cibba</h5>
                                 <span>Departement Psychologie, Lettres, Langues & Histoire</span>
                             </div>
-                            <div class="testimonial-item text-center">
+
+                                                     <div class="testimonial-item text-center">
                                 <div class="position-relative mb-5">
                                     <img class="img-fluid rounded-circle mx-auto" src="img/testimonial.webp" alt="" />
                                     <div class="position-absolute top-100 start-50 translate-middle d-flex align-items-center justify-content-center  rounded-circle" style="width: 60px; height: 60px">
@@ -516,12 +520,15 @@
                                     et tempor diam tempor erat.
                                 </p>
                                 <!--Mettre lien projets moodle<-->
-                                <a href="" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block testiBtn">Exemple de réalisation<i class="fa fa-search ms-3"></i></a>
+                                    <img class="img-fluid TestImg" src="img/courses-1.webp" alt="" />
+                                <!--<a href="" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block testiBtn">Exemple de réalisation<i class="fa fa-search ms-3"></i></a><-->
                                 <hr class="w-25 mx-auto" />
                                 <h5>Florence Cibba</h5>
                                 <span>Departement Psychologie, Lettres, Langues & Histoire</span>
                             </div>
-                            <div class="testimonial-item text-center">
+
+
+                         <div class="testimonial-item text-center">
                                 <div class="position-relative mb-5">
                                     <img class="img-fluid rounded-circle mx-auto" src="img/testimonial.webp" alt="" />
                                     <div class="position-absolute top-100 start-50 translate-middle d-flex align-items-center justify-content-center  rounded-circle" style="width: 60px; height: 60px">
@@ -535,11 +542,40 @@
                                     et tempor diam tempor erat.
                                 </p>
                                 <!--Mettre lien projets moodle<-->
-                                <a href="" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block testiBtn">Exemple de réalisation<i class="fa fa-search ms-3"></i></a>
+                                    <img class="img-fluid TestImg" src="img/courses-1.webp" alt="" />
+                                <!--<a href="" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block testiBtn">Exemple de réalisation<i class="fa fa-search ms-3"></i></a><-->
                                 <hr class="w-25 mx-auto" />
                                 <h5>Florence Cibba</h5>
                                 <span>Departement Psychologie, Lettres, Langues & Histoire</span>
                             </div>
+
+
+                         <div class="testimonial-item text-center">
+                                <div class="position-relative mb-5">
+                                    <img class="img-fluid rounded-circle mx-auto" src="img/testimonial.webp" alt="" />
+                                    <div class="position-absolute top-100 start-50 translate-middle d-flex align-items-center justify-content-center  rounded-circle" style="width: 60px; height: 60px">
+                                        <i class="fa fa-quote-left fa-2x text-primary testiFa1"></i>
+                                    </div>
+                                </div>
+                                <p class="fs-4">
+                                    Dolores sed duo clita tempor justo dolor et
+                                    stet lorem kasd labore dolore lorem ipsum.
+                                    At lorem lorem magna ut et, nonumy et labore
+                                    et tempor diam tempor erat.
+                                </p>
+                                <!--Mettre lien projets moodle<-->
+                                    <img class="img-fluid TestImg" src="img/courses-1.webp" alt="" />
+                                <!--<a href="" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block testiBtn">Exemple de réalisation<i class="fa fa-search ms-3"></i></a><-->
+                                <hr class="w-25 mx-auto" />
+                                <h5>Florence Cibba</h5>
+                                <span>Departement Psychologie, Lettres, Langues & Histoire</span>
+                            </div>
+
+
+              
+
+              
+
                         </div>
                     </div>
                 </div>
@@ -564,7 +600,7 @@
                             <div class="teamSubWUnder">
                                 <img src="./img/Ico3.webp" class="iconIntro" alt="Acompagnement numérique" />
                                 <p>
-                                    Des <strong>Ingénieures pédagogiques</strong> pour comprendre les enjeux de la transmission de connaissance et accompagner les enseignants en leur proposant des solutions innovantes et adaptées.
+                                    Des <strong>Ingénieures pédagogiques</strong> pour répondre aux enjeux de l'apprentissage et accompagner les enseignants en leur proposant des solutions adaptées et innovantes.
                                 </p>
                             </div>
                             <div class="teamSubWUnder">
@@ -715,12 +751,11 @@
                             30021 Nîmes Cedex 01
                         </p>
                         <p class="mb-2">
-                            <i class="fa fa-phone-alt me-3"></i>06 36 65 65 65
+                            <i class="fa fa-phone-alt me-3"></i> 06 36 65 65 65
                         </p>
                         <p class="mb-2">
                             <i class="fa fa-envelope me-3"></i>
-                            <a href="mailto:snap@unimes.fr">
-                                snap@unimes.fr
+                            <a href="mailto:snap@unimes.fr">snap@unimes.fr
                             </a>
                         </p>
                     </div>
