--- a/index.html
+++ b/index.html
@@ -248,6 +248,9 @@
         <!--ABOUT V2 2-->
         <section id="about2" class="container-xxl py-6">
             <div class="container fadeInUp">
+                <h1 class="display-6 mb-4 aboutTitle missionTitle">
+                    Les missions de notre service
+                            </h1>
                 <div class="row">
                     <div class="flip-card col-lg-3 col-md-6 wow fadeInUp missionCard  ">
                         <div class="flip-card-inner shadow ">
@@ -272,13 +275,12 @@
                             </div>
                             <div class="flip-card-back">
                                 <p>
-                                    Dolores sed duo clita tempor justo dolor et
-                                    stet lorem kasd labore dolore lorem ipsum.
+             Capsule vidéo, module de cours interactif, infographies, activités pédagogiques ludiques…
                                 </p>
                             </div>
                         </div>
                     </div>
-                    <div class="flip-card col-lg-3 col-md-6 wow fadeInUp missionCard  ">
+                    <div class="flip-card col-lg-3 col-md-6 wow fadeInUp missionCard ">
                         <div class="flip-card-inner shadow ">
                             <div class="flip-card-front">
                                 <p>
@@ -287,8 +289,7 @@
                             </div>
                             <div class="flip-card-back">
                                 <p>
-                                    Dolores sed duo clita tempor justo dolor et
-                                    stet lorem kasd labore dolore lorem ipsum.
+                                    FAQ, tutoriels, fiches pratiques, ateliers...
                                 </p>
                             </div>
                         </div>
@@ -302,8 +303,7 @@
                             </div>
                             <div class="flip-card-back">
                                 <p>
-                                    Dolores sed duo clita tempor justo dolor et
-                                    stet lorem kasd labore dolore lorem ipsum.
+                                    Ateliers dédiés, accompagnement en situation, réflexion sur l'ergonomie des outils et leurs applications
                                 </p>
                             </div>
                         </div>
@@ -332,8 +332,7 @@
                             </div>
                             <div class="flip-card-back">
                                 <p>
-                                    Dolores sed duo clita tempor justo dolor et
-                                    stet lorem kasd labore dolore lorem ipsum.
+                                    Étude et essais d'innovations pédagogiques en situation et recueil de données.
                                 </p>
                             </div>
                         </div>
@@ -347,8 +346,7 @@
                             </div>
                             <div class="flip-card-back">
                                 <p>
-                                    Dolores sed duo clita tempor justo dolor et
-                                    stet lorem kasd labore dolore lorem ipsum.
+                                    Revalorisation de lieux, implémentation d'outils numériques et veille technologique axée sur la pédagogie
                                 </p>
                             </div>
                         </div>
@@ -549,9 +547,19 @@
                     </div>
                 </div>
                 <!--Tool item end-->
+
             </div>
+              <a class="btn fadeInUp btn-outline-primary border-2 toolButton" href="">Découvrir tous les outils à votre disposition</a>
             </div>
         </section>
+
+
+
+
+
+
+
+
         <!--REALISATIONS-->
         <section id="réalisations" class=" outils container-xxl courses my-6 py-6 pb-0">
             <div class="container">
