--- a/index.html
+++ b/index.html
@@ -248,9 +248,11 @@
         <!--ABOUT V2 2-->
         <section id="about2" class="container-xxl py-6">
             <div class="container fadeInUp">
+                <!--
                 <h1 class="display-6 mb-4 aboutTitle missionTitle">
                     Les missions de notre service
-                            </h1>
+                </h1>
+                <--->
                 <div class="row">
                     <div class="flip-card col-lg-3 col-md-6 wow fadeInUp missionCard  ">
                         <div class="flip-card-inner shadow ">
@@ -275,7 +277,7 @@
                             </div>
                             <div class="flip-card-back">
                                 <p>
-             Capsule vidéo, module de cours interactif, infographies, activités pédagogiques ludiques…
+                                    Capsule vidéo, module de cours interactif, infographies, activités pédagogiques ludiques…
                                 </p>
                             </div>
                         </div>
@@ -452,7 +454,7 @@
             </div>
             <div class=" row g-4 justify-content-center cardRow">
                 <!-- first Tool item start-->
-                <div class=" card2 col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                <div class=" card2 col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="  courses-item shadow d-flex flex-column  overflow-hidden h-100">
                         <div class="card text-center p-4 pt-0">
                             <h5 class="mb-3">Optimiser votre parcours pédagogique</h5>
@@ -461,7 +463,7 @@
                             </p>
                         </div>
                         <div class="position-relative mt-auto">
-                            <img class="img-fluid" src="img/courses-1.webp" alt="" />
+                            <img class="" src="img/courses-1.webp" alt="" />
                             <div class="courses-overlay">
                                 <!--link to -->
                                 <a class="btn btn-outline-primary border-2" href="">En savoir plus</a>
@@ -471,7 +473,7 @@
                 </div>
                 <!--first Tool item end-->
                 <!--Tool item start-->
-                <div class=" card2 col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                <div class=" card2 col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="  courses-item shadow d-flex flex-column  overflow-hidden h-100">
                         <div class="card text-center p-4 pt-0">
                             <h5 class="mb-3">Créer du contenu et des ressources multimédia</h5>
@@ -480,7 +482,7 @@
                             </p>
                         </div>
                         <div class="position-relative mt-auto">
-                            <img class="img-fluid" src="img/courses-2.webp" alt="" />
+                            <img class="" src="img/courses-2.webp" alt="" />
                             <div class="courses-overlay">
                                 <!--link to -->
                                 <a class="btn btn-outline-primary border-2" href="">En savoir plus</a>
@@ -490,7 +492,7 @@
                 </div>
                 <!--Tool item end-->
                 <!--Tool item start-->
-                <div class=" card2 col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                <div class=" card2 col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="  courses-item shadow d-flex flex-column  overflow-hidden h-100">
                         <div class="card text-center p-4 pt-0">
                             <h5 class="mb-3">
@@ -501,7 +503,7 @@
                             </p>
                         </div>
                         <div class="position-relative mt-auto">
-                            <img class="img-fluid" src="img/courses-3.webp" alt="" />
+                            <img class="" src="img/courses-3.webp" alt="" />
                             <div class="courses-overlay">
                                 <!--link to -->
                                 <a class="btn btn-outline-primary border-2" href="">En savoir plus</a>
@@ -511,7 +513,7 @@
                 </div>
                 <!--Tool item end-->
                 <!--Tool item start-->
-                <div class=" card2 col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                <div class=" card2 col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="  courses-item shadow d-flex flex-column  overflow-hidden h-100">
                         <div class="card text-center p-4 pt-0">
                             <h5 class="mb-3"> Mettre en place une évaluation de vos enseignements</h5>
@@ -520,7 +522,7 @@
                             </p>
                         </div>
                         <div class="position-relative mt-auto">
-                            <img class="img-fluid" src="img/courses-4.webp" alt="" />
+                            <img class="" src="img/courses-4.webp" alt="" />
                             <div class="courses-overlay">
                                 <!--link to -->
                                 <a class="btn btn-outline-primary border-2" href="">En savoir plus</a>
@@ -530,36 +532,34 @@
                 </div>
                 <!--Tool item end-->
                 <!--Tool item start-->
-                <div class=" card2 col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+
+
+
+
+                <div class=" card2 col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="  courses-item shadow d-flex flex-column  overflow-hidden h-100">
                         <div class="card text-center p-4 pt-0">
                             <h5 class="mb-3">Nous rencontrer et échanger</h5>
                             <p>
                                 Pour discuter d’innovation pédagogique, aborder une problématique précise, être conseillé à l’utilisation d’un outil numérique ou débattre de votre série préférée, le SNAP est votre interlocuteur privilégié.
                             </p>
-                            < </div> <div class="position-relative mt-auto">
-                                <img class="img-fluid" src="img/courses-5.webp" alt="" />
-                                <div class="courses-overlay">
-                                    <!--link to -->
-                                    <a class="btn btn-outline-primary border-2" href="">En savoir plus</a>
-                                </div>
+                        </div>
+                        <div class="position-relative mt-auto">
+                            <img class="" src="img/courses-5.webp" alt="" />
+                            <div class="courses-overlay">
+                                <!--link to -->
+                                <a class="btn btn-outline-primary border-2" href="">En savoir plus</a>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <!--Tool item end-->
 
+
+                <!--Tool item end-->
             </div>
-              <a class="btn fadeInUp btn-outline-primary border-2 toolButton" href="">Découvrir tous les outils à votre disposition</a>
+            <a class="btn fadeInUp btn-outline-primary border-2 toolButton" href="">Découvrir tous les outils à votre disposition</a>
             </div>
         </section>
-
-
-
-
-
-
-
-
         <!--REALISATIONS-->
         <section id="réalisations" class=" outils container-xxl courses my-6 py-6 pb-0">
             <div class="container">
