--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
         <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet" />
         <link href="css/bootstrap.min.css" rel="stylesheet" />
         <link href="css/style.css" rel="stylesheet" />
-        
     </head>
 
     <body>
@@ -523,6 +522,7 @@
                         </div>
                     </div>
                 </div>
+            </div>
             </div>
             <a class="btn fadeInUp btn-outline-primary border-2 toolButton" href="">Découvrir tous les outils à votre disposition</a>
             </div>
