--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <a href="#besoins" class="nav-item nav-link">Votre besoin</a>
                     <a href="#réalisations" class="nav-item nav-link">Réalisations</a>
                     <a href="#équipe" class="nav-item nav-link">Équipe</a>
-                    <a href="contact.html" class="nav-item nav-link secondC">Contact</a><a href="contact.html" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block mainC">Contact<i class="fa fa-arrow-right ms-3"></i></a>
+                    <a href="contact.html" class="nav-item nav-link secondC">Contact</a><a href="contact.html" class="btn btn-primary py-4 d-none d-lg-block mainC">Contact<i class="fa fa-arrow-right ms-3"></i></a>
                 </div>
             </div>
         </nav>
