refacto done & starting additionnal pages

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <a href="index.html" class="navbar-brand d-flex align-items-center border-end px-4 
             px-lg-5">
                 <h1 class="headerTitle">
-                    Service Numérique & Accompagnement Pédagogique
+                    Service Numérique & d'Accompagnement Pédagogique
                 </h1>
                 <h1 class="headerTitle2">
                     SNAP
@@ -53,7 +53,8 @@
                     <a href="#besoins" class="nav-item nav-link">Votre besoin</a>
                     <a href="#réalisations" class="nav-item nav-link">Réalisations</a>
                     <a href="#équipe" class="nav-item nav-link">Équipe</a>
-                    <a href="contact.html" class="nav-item nav-link secondC">Contact</a><a href="contact.html" class="btn btn-primary py-4 d-none d-lg-block mainC">Contact<i class="fa fa-arrow-right ms-3"></i></a>
+                    <a href="contact.html" class="nav-item nav-link secondC">Contact</a>
+                    <a href="contact.html" class="btn btn-primary py-4 d-none d-lg-block mainC">Contact<i class="fa fa-arrow-right ms-3"></i></a>
                 </div>
             </div>
         </nav>
@@ -447,7 +448,7 @@
                             <img class="img-fluid" src="img/courses-1.webp" alt="Optimiser votre parcours pédagogique" />
                             <div class="courses-overlay">
                                 <!--link to -->
-                                <a class="btn btn-outline-primary border-2" href="">En savoir plus</a>
+                                <a class="btn btn-outline-primary border-2" href="ressources.html#optimiser">En savoir plus</a>
                             </div>
                         </div>
                     </div>
@@ -464,7 +465,7 @@
                             <img class="img-fluid" src="img/courses-2.webp" alt="Créer du contenu" />
                             <div class="courses-overlay">
                                 <!--link to -->
-                                <a class="btn btn-outline-primary border-2" href="">En savoir plus</a>
+                                <a class="btn btn-outline-primary border-2" href="ressources.html#créer">En savoir plus</a>
                             </div>
                         </div>
                     </div>
@@ -483,7 +484,7 @@
                             <img class="img-fluid" src="img/courses-3.webp" alt="Accompagnement personnalisé" />
                             <div class="courses-overlay">
                                 <!--link to -->
-                                <a class="btn btn-outline-primary border-2" href="">En savoir plus</a>
+                                <a class="btn btn-outline-primary border-2" href="ressources.html#accompagnement">En savoir plus</a>
                             </div>
                         </div>
                     </div>
@@ -500,7 +501,7 @@
                             <img class="img-fluid" src="img/courses-4.webp" alt="Evaluation par les pairs" />
                             <div class="courses-overlay">
                                 <!--link to -->
-                                <a class="btn btn-outline-primary border-2" href="">En savoir plus</a>
+                                <a class="btn btn-outline-primary border-2" href="ressources.html#evaluation">En savoir plus</a>
                             </div>
                         </div>
                     </div>
@@ -517,14 +518,14 @@
                             <img class="img-fluid" src="img/courses-5.webp" alt="Nous rencontrer" />
                             <div class="courses-overlay">
                                 <!--link to -->
-                                <a class="btn btn-outline-primary border-2" href="">En savoir plus</a>
+                                <a class="btn btn-outline-primary border-2" href="contact.html">En savoir plus</a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
             </div>
-            <a class="btn fadeInUp btn-outline-primary border-2 toolButton" href="">Découvrir tous les outils à votre disposition</a>
+            <a class="btn fadeInUp btn-outline-primary border-2 toolButton" href="ressources.html">Découvrir tous les outils à votre disposition</a>
             </div>
         </section>
         <!--REALISATIONS-->
