working on optimise section in ressources.html3

--- a/ressources.html
+++ b/ressources.html
@@ -149,46 +149,32 @@
                 <h1 class=" title">
                     Optimiser votre parcours pédagogique
                 </h1>
-                <div class="mx-auto mb-5 wow wow2" data-wow-delay="0.1s" />
-                <p><strong>
-                        Hybridation, enrichissement, scénarisation : autant de manière d'optimiser vos enseignement à destination de la réussite étudiante.</strong>
-                </p>
-                <p>
-                    Dolores sed duo clita tempor justo dolor et stet lorem kasd labore dolore lorem ipsum. At lorem lorem magna ut et, nonumy et labore et tempor diam tempor erat.Dolores sed duo clita tempor justo dolor et stet lorem kasd labore dolore lorem ipsum. At lorem lorem magna ut et, nonumy et labore et tempor diam tempor erat.
-                </p>
-                    </div>
+                <div class="mx-auto mb-5 wow wow2" data-wow-delay="0.1s">
+                    <p><strong>
+                            Hybridation, enrichissement, scénarisation : autant de manière d'optimiser vos enseignement à destination de la réussite étudiante.</strong>
+                    </p>
+                    <p>
+                        Dolores sed duo clita tempor justo dolor et stet lorem kasd labore dolore lorem ipsum. At lorem lorem magna ut et, nonumy et labore et tempor diam tempor erat.Dolores sed duo clita tempor justo dolor et stet lorem kasd labore dolore lorem ipsum. At lorem lorem magna ut et, nonumy et labore et tempor diam tempor erat.
+                    </p>
+                </div>
             </div>
-
+            <!--TOOL 1-->
             <div class="toolWrapper">
                 <div class="partA shadow">
-                    <img class="img-fluid " src="img/tool.webp" alt="Optimiser votre parcours pédagogique" />
-                    <!-- Button trigger modal -->
-                    <button type="button" class="btn btn-primary modalB  shadow" data-bs-toggle="modal" data-bs-target="#modalTool1">Ressource</button>
-                    <!-- Modal -->
-                    <div class="modal fade" id="modalTool1" tabindex="-1" aria-labelledby="modalTool1Label" aria-hidden="true">
-                        <div class="modal-dialog">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h5 class="modal-title" id="exampleModalLabel">Mentions légales</h5>
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                </div>
-                                <div class="modal-body">
-                                    <p>
-                                        Tempor justo dolor et stet lorem kasd labore dolore lorem ipsum. At lorem lorem magna ut et, nonumy et labore et tempor diam tempor erat.Dolores sed duo clita tempor justo dolor et stet lorem kasd labore dolore lorem ipsum. At lorem lorem magna ut et, nonumy et labore et tempor diam tempor erat.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    <a href="./doc/pdfTest.pdf" target="_blank">
+                        <img class="img-fluid " src="img/tool.webp" alt="Optimiser votre parcours pédagogique" />
+                        <button class="btn btn-primary modalB  shadow">Documentation</button></a>
                 </div>
                 <div class="partA2"></div>
                 <div class="partB shadow">
                     <p>
-                        Hybridation, enrichissement, scénarisation d’enseignement, guider les étudiants vers l'autonomie, dynamiser l’activité des apprenants...Hybridation, enrichissement, scénarisation d’enseignement, guider les étudiants vers l'autonomie, dynamiser l’activité des apprenants...Hybridation, enrichissement, scénarisation d’enseignement, guider les étudiants vers l'autonomie, dynamiser l’activité des apprenants...
+                        Dolores sed duo clita tempor justo dolor et stet lorem kasd labore dolore lorem ipsum. At lorem lorem magna ut et, nonumy et labore et tempor diam tempor erat.Dolores sed duo clita tempor justo dolor et stet lorem kasd labore dolore lorem ipsum. At lorem lorem magna ut et, nonumy et labore et tempor diam tempor erat.
                     </p>
                 </div>
             </div>
-           
+            <!--TOOL END-->
+
+        </section>
         </section>
         <!--RESSOURCES END-->
         <!--REALISATIONS-->
@@ -343,7 +329,6 @@
                         <a href="https://www.unimes.fr/" target="_blank">
                             <img fetchpriority="high" src="./img/unimes.webp" class="logo" />
                         </a>
-                        <!-- Button trigger modal -->
                         <button type="button" class="btn btn-primary modalB" data-bs-toggle="modal" data-bs-target="#exampleModal">
                             Mentions légales
                         </button>
