Ressources page : DONE, Basic Contact page : DONE, going to work on Contact form from team template

--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
                             <img class="img-fluid" src="img/courses-1.webp" alt="Optimiser votre parcours pédagogique" />
                             <div class="courses-overlay">
                                 <!--link to -->
-                                <a class="btn btn-outline-primary border-2" href="ressources.html#optimiser">En savoir plus</a>
+                                <a class="btn btn-outline-primary border-2" href="ressources.html#optimisation">En savoir plus</a>
                             </div>
                         </div>
                     </div>
@@ -465,7 +465,7 @@
                             <img class="img-fluid" src="img/courses-2.webp" alt="Créer du contenu" />
                             <div class="courses-overlay">
                                 <!--link to -->
-                                <a class="btn btn-outline-primary border-2" href="ressources.html#créer">En savoir plus</a>
+                                <a class="btn btn-outline-primary border-2" href="ressources.html#création">En savoir plus</a>
                             </div>
                         </div>
                     </div>
@@ -474,7 +474,7 @@
                     <div class="  courses-item shadow d-flex flex-column  overflow-hidden h-100">
                         <div class="card text-center p-4 pt-0">
                             <h5 class="mb-3">
-                                Prendre rendez-vous pour un accompagnement personnalisé
+                                Accompagnement personnalisé
                             </h5>
                             <p>
                                 Individuel ou en groupe - aide à la prise en main des logiciels, de la plateforme en ligne, présentation des équipements numériques dans les salles…
@@ -501,7 +501,7 @@
                             <img class="img-fluid" src="img/courses-4.webp" alt="Evaluation par les pairs" />
                             <div class="courses-overlay">
                                 <!--link to -->
-                                <a class="btn btn-outline-primary border-2" href="ressources.html#evaluation">En savoir plus</a>
+                                <a class="btn btn-outline-primary border-2" href="ressources.html#évaluation">En savoir plus</a>
                             </div>
                         </div>
                     </div>
@@ -529,7 +529,7 @@
             </div>
         </section>
         <!--REALISATIONS-->
-        <section id="réalisations" class=" outils container-xxl courses my-6 py-6 pb-0">
+        <section id="réalisations" class="réalisations outils container-xxl courses my-6 py-6 pb-0">
             <div class="container">
                 <div class="text-center mx-auto mb-5 wow wow2 fadeInUp" data-wow-delay="0.1s" style="max-width: 500px" * />
                 <h1 class="display-6 mb-4 title">
