--- a/ressources.html
+++ b/ressources.html
@@ -192,7 +192,7 @@
                     <div class="partA shadow">
                         <a href="./doc/pdfTest.pdf" target="_blank">
                             <img class="img-fluid " src="img/tool2.webp" alt="Optimiser votre parcours pédagogique" />
-                            <button class="btn btn-primary modalB  shadow">Documentation</button></a>
+                            <button class="btn btn-primary modalB  shadow"><i class="fa fa-arrow-circle-right" aria-hidden="true"></i>Documentation</button></a>
                     </div>
                     <div class="partA2"></div>
                     <div class="partB shadow">
@@ -210,7 +210,7 @@
                     <div class="partA shadow">
                         <a href="./doc/pdfTest.pdf" target="_blank">
                             <img class="img-fluid " src="img/tool.webp" alt="Optimiser votre parcours pédagogique" />
-                            <button class="btn btn-primary modalB  shadow">Documentation</button></a>
+                            <button class="btn btn-primary modalB  shadow"><i class="fa fa-arrow-circle-right" aria-hidden="true"></i>Documentation</button></a>
                     </div>
                     <div class="partA2"></div>
                     <div class="partB shadow">
@@ -228,7 +228,7 @@
                     <div class="partA shadow">
                         <a href="./doc/pdfTest.pdf" target="_blank">
                             <img class="img-fluid " src="img/tool3.webp" alt="Optimiser votre parcours pédagogique" />
-                            <button class="btn btn-primary modalB  shadow">Documentation</button></a>
+                            <button class="btn btn-primary modalB  shadow"><i class="fa fa-arrow-circle-right" aria-hidden="true"></i>Documentation</button></a>
                     </div>
                     <div class="partA2"></div>
                     <div class="partB shadow">
@@ -246,7 +246,7 @@
                     <div class="partA shadow">
                         <a href="./doc/pdfTest.pdf" target="_blank">
                             <img class="img-fluid " src="img/tool4.webp" alt="Optimiser votre parcours pédagogique" />
-                            <button class="btn btn-primary modalB  shadow">Documentation</button></a>
+                            <button class="btn btn-primary modalB  shadow"><i class="fa fa-arrow-circle-right" aria-hidden="true"></i>Documentation</button></a>
                     </div>
                     <div class="partA2"></div>
                     <div class="partB shadow">
@@ -363,7 +363,7 @@
                     <div class="partA shadow">
                         <a href="./doc/pdfTest.pdf" target="_blank">
                             <img class="img-fluid " src="img/tool2.webp" alt="Optimiser votre parcours pédagogique" />
-                            <button class="btn btn-primary modalB  shadow">Documentation</button></a>
+                            <button class="btn btn-primary modalB  shadow"><i class="fa fa-arrow-circle-right" aria-hidden="true"></i>Documentation</button></a>
                     </div>
                     <div class="partA2"></div>
                     <div class="partB shadow">
@@ -381,7 +381,7 @@
                     <div class="partA shadow">
                         <a href="./doc/pdfTest.pdf" target="_blank">
                             <img class="img-fluid " src="img/tool.webp" alt="Optimiser votre parcours pédagogique" />
-                            <button class="btn btn-primary modalB  shadow">Documentation</button></a>
+                            <button class="btn btn-primary modalB  shadow"><i class="fa fa-arrow-circle-right" aria-hidden="true"></i>Documentation</button></a>
                     </div>
                     <div class="partA2"></div>
                     <div class="partB shadow">
@@ -399,7 +399,7 @@
                     <div class="partA shadow">
                         <a href="./doc/pdfTest.pdf" target="_blank">
                             <img class="img-fluid " src="img/tool3.webp" alt="Optimiser votre parcours pédagogique" />
-                            <button class="btn btn-primary modalB  shadow">Documentation</button></a>
+                            <button class="btn btn-primary modalB  shadow"><i class="fa fa-arrow-circle-right" aria-hidden="true"></i>Documentation</button></a>
                     </div>
                     <div class="partA2"></div>
                     <div class="partB shadow">
@@ -417,7 +417,7 @@
                     <div class="partA shadow">
                         <a href="./doc/pdfTest.pdf" target="_blank">
                             <img class="img-fluid " src="img/tool4.webp" alt="Optimiser votre parcours pédagogique" />
-                            <button class="btn btn-primary modalB  shadow">Documentation</button></a>
+                            <button class="btn btn-primary modalB  shadow"><i class="fa fa-arrow-circle-right" aria-hidden="true"></i>Documentation</button></a>
                     </div>
                     <div class="partA2"></div>
                     <div class="partB shadow">
@@ -534,7 +534,7 @@
                     <div class="partA shadow">
                         <a href="./doc/pdfTest.pdf" target="_blank">
                             <img class="img-fluid " src="img/tool2.webp" alt="Optimiser votre parcours pédagogique" />
-                            <button class="btn btn-primary modalB  shadow">Documentation</button></a>
+                            <button class="btn btn-primary modalB  shadow"><i class="fa fa-arrow-circle-right" aria-hidden="true"></i>Documentation</button></a>
                     </div>
                     <div class="partA2"></div>
                     <div class="partB shadow">
@@ -552,7 +552,7 @@
                     <div class="partA shadow">
                         <a href="./doc/pdfTest.pdf" target="_blank">
                             <img class="img-fluid " src="img/tool.webp" alt="Optimiser votre parcours pédagogique" />
-                            <button class="btn btn-primary modalB  shadow">Documentation</button></a>
+                            <button class="btn btn-primary modalB  shadow"><i class="fa fa-arrow-circle-right" aria-hidden="true"></i>Documentation</button></a>
                     </div>
                     <div class="partA2"></div>
                     <div class="partB shadow">
@@ -570,7 +570,7 @@
                     <div class="partA shadow">
                         <a href="./doc/pdfTest.pdf" target="_blank">
                             <img class="img-fluid " src="img/tool3.webp" alt="Optimiser votre parcours pédagogique" />
-                            <button class="btn btn-primary modalB  shadow">Documentation</button></a>
+                            <button class="btn btn-primary modalB  shadow"><i class="fa fa-arrow-circle-right" aria-hidden="true"></i>Documentation</button></a>
                     </div>
                     <div class="partA2"></div>
                     <div class="partB shadow">
@@ -588,7 +588,7 @@
                     <div class="partA shadow">
                         <a href="./doc/pdfTest.pdf" target="_blank">
                             <img class="img-fluid " src="img/tool4.webp" alt="Optimiser votre parcours pédagogique" />
-                            <button class="btn btn-primary modalB  shadow">Documentation</button></a>
+                            <button class="btn btn-primary modalB  shadow"><i class="fa fa-arrow-circle-right" aria-hidden="true"></i>Documentation</button></a>
                     </div>
                     <div class="partA2"></div>
                     <div class="partB shadow">
@@ -708,7 +708,7 @@
                     <div class="partA shadow">
                         <a href="./doc/pdfTest.pdf" target="_blank">
                             <img class="img-fluid " src="img/tool2.webp" alt="Optimiser votre parcours pédagogique" />
-                            <button class="btn btn-primary modalB  shadow">Documentation</button></a>
+                            <button class="btn btn-primary modalB  shadow"><i class="fa fa-arrow-circle-right" aria-hidden="true"></i>Documentation</button></a>
                     </div>
                     <div class="partA2"></div>
                     <div class="partB shadow">
@@ -726,7 +726,7 @@
                     <div class="partA shadow">
                         <a href="./doc/pdfTest.pdf" target="_blank">
                             <img class="img-fluid " src="img/tool.webp" alt="Optimiser votre parcours pédagogique" />
-                            <button class="btn btn-primary modalB  shadow">Documentation</button></a>
+                            <button class="btn btn-primary modalB  shadow"><i class="fa fa-arrow-circle-right" aria-hidden="true"></i>Documentation</button></a>
                     </div>
                     <div class="partA2"></div>
                     <div class="partB shadow">
@@ -744,7 +744,7 @@
                     <div class="partA shadow">
                         <a href="./doc/pdfTest.pdf" target="_blank">
                             <img class="img-fluid " src="img/tool3.webp" alt="Optimiser votre parcours pédagogique" />
-                            <button class="btn btn-primary modalB  shadow">Documentation</button></a>
+                            <button class="btn btn-primary modalB  shadow"><i class="fa fa-arrow-circle-right" aria-hidden="true"></i>Documentation</button></a>
                     </div>
                     <div class="partA2"></div>
                     <div class="partB shadow">
@@ -762,7 +762,7 @@
                     <div class="partA shadow">
                         <a href="./doc/pdfTest.pdf" target="_blank">
                             <img class="img-fluid " src="img/tool4.webp" alt="Optimiser votre parcours pédagogique" />
-                            <button class="btn btn-primary modalB  shadow">Documentation</button></a>
+                            <button class="btn btn-primary modalB  shadow"><i class="fa fa-arrow-circle-right" aria-hidden="true"></i>Documentation</button></a>
                     </div>
                     <div class="partA2"></div>
                     <div class="partB shadow">
